--- a/reports.html
+++ b/reports.html
@@ -345,6 +345,8 @@ averages.forEach(a => {
 
 
 
+
+
  function renderGrouped(grouped, avgMap) {
   return Object.entries(grouped).map(([student, subjects]) => {
 
@@ -374,7 +376,6 @@ averages.forEach(a => {
     const { strengths, needs } = generateStrengthsAndNeeds(subjects);
     const recommendations = generateRecommendations(subjects, trend, supportFlag);
 
-    // Accumulate backend averages for overall term average
     let overallSum = 0, overallCount = 0;
 
     return `
@@ -424,24 +425,32 @@ averages.forEach(a => {
 
       const evidence = getEvidenceStatus(rows);
 
-      // Get backend average safely
+      // compute subject average
+      let subjectAvg = avgMap?.[student]?.[subject.trim()]?.average_score ?? null;
+      if (subjectAvg === null) {
+        const scores = rows.map(r => levelToScore(r.level)).filter(s => s > 0);
+        subjectAvg = scores.length ? scores.reduce((a,b)=>a+b,0)/scores.length : null;
+      }
 
+      if (subjectAvg !== null) {
+        overallSum += subjectAvg;
+        overallCount++;
+      }
 
-const backendAvg = avgMap?.[student]?.[subject.trim()]?.average_score ?? null;
+      function getAchievementLabel(score) {
+        if (score >= 3.5) return "Exceeding Expectations";
+        if (score >= 2.5) return "Meeting Expectations";
+        if (score >= 1.5) return "Approaching Expectations";
+        return "Below Expectations";
+      }
 
-let subjectAvg = backendAvg;
-if (subjectAvg === null) {
-  // compute from actual scores
-  const scores = rows.map(r => levelToScore(r.level)).filter(s => s > 0);
-  subjectAvg = scores.length ? scores.reduce((a,b)=>a+b,0)/scores.length : null;
-}
+      function getAvgColor(score) {
+        if (score >= 3.5) return "#2ecc71";
+        if (score >= 2.5) return "#3498db";
+        if (score >= 1.5) return "#f1c40f";
+        return "#e74c3c";
+      }
 
-if (subjectAvg !== null) {
-  overallSum += subjectAvg;
-  overallCount++;
-}
-
-     
       return `
       <div class="split-block subject-block">
         <h5>📘 ${subject} — Assessments: <strong>${rows.length}</strong></h5>
@@ -465,9 +474,24 @@ if (subjectAvg !== null) {
                 <td>${r.remarks || "—"}</td>
               </tr>`).join("")}
           </tbody>
+          ${subjectAvg !== null ? `
+          <tfoot>
+            <tr style="font-weight:bold; background:#f0f0f0;">
+              <td>SUBJECT AVERAGE</td>
+              <td colspan="2">
+                <span style="
+                  padding: 3px 8px;
+                  border-radius: 12px;
+                  font-weight:bold;
+                  color:white;
+                  background:${getAvgColor(subjectAvg)};
+                ">
+                  ${subjectAvg.toFixed(2)} — ${getAchievementLabel(subjectAvg)}
+                </span>
+              </td>
+            </tr>
+          </tfoot>` : ""}
         </table>
-
-        ${backendAvg !== null ? `<p style="text-align:right;font-weight:bold;margin-top:4px;">Subject Average: <strong>${backendAvg.toFixed(2)}</strong></p>` : ""}
       </div>`;
     }).join("")}
 
