--- a/reports.html
+++ b/reports.html
@@ -319,30 +319,28 @@ averages.forEach(a => {
 
   
 
-  /* ===== RAW RESULTS ===== */
-  /* ===== RAW RESULTS ===== */
-const { data } = await supabase
+ const { data, error } = await supabase
   .from("assessment_results")
   .select(`
     remarks,
-students(
-  first_name,
-  last_name,
-  admission_number,
-  classes(name),
-  school(name)
-),
-
-
+    students(first_name,last_name,admission_number),
     competencies(name,subjects(name)),
     achievement_levels(label)
   `)
   .eq("term", termName)
   .eq("academic_year", SYSTEM_YEAR);
-if (!data.length) {
+
+if (error) {
+  console.error("Assessment results error:", error);
+  status.innerText = "Failed to load results.";
+  return;
+}
+
+if (!data || data.length === 0) {
   status.innerText = "No results found.";
   return;
 }
+
 const schoolName = data[0]?.students?.school?.name ?? "—";
 
 
